color/color_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: color-svc
spec:
  selector:
    app: colorapp
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
