color/color_ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: color-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: color.ekslabs.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: color-svc
                port:
                  number: 80
